@@ -1,0 +1,9 @@
+include $(SUBDIR)../config.mak
+
+NAME = avcore
+
+HEADERS = avcore.h                                                      \
+
+OBJS = utils.o                                                          \
+
+include $(SUBDIR)../subdir.mak
