@@ -1,0 +1,4 @@
+LIBAVCORE_$MAJOR {
+        global: av_*; ff_*; avcore*;
+        local: *;
+};
